--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -11,6 +11,8 @@ spec:
         kind: GitRepository
         name: ingress-nginx
         namespace: flux-system
+  dependsOn:
+  - name: istio-base
   interval: 5m
   values:
     controller:
