--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -12,7 +12,8 @@ spec:
         name: ingress-nginx
         namespace: flux-system
   dependsOn:
-  - name: istio-base
+  - name: istio-discovery
+    namespace: istio-system
   interval: 5m
   values:
     controller:
