--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -11,9 +11,6 @@ spec:
         kind: GitRepository
         name: ingress-nginx
         namespace: flux-system
-  dependsOn:
-  - name: istio-discovery
-    namespace: istio-system
   interval: 5m
   values:
     controller:
@@ -27,10 +24,11 @@ spec:
         sidecar.istio.io/inject: "true"
       admissionWebhooks:
         patch:
+          enabled: true
+          image:
+            repository: docker.io/jettech/kube-webhook-certgen
+            tag: v1.5.1
+            pullPolicy: IfNotPresent
           podAnnotations:
             sidecar.istio.io/inject: "false"
       replicaCount: 1
-      service:
-        enabled: true
-        annotations:
-          service.beta.kubernetes.io/aws-load-balancer-type: nlb
