--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -11,6 +11,9 @@ spec:
         kind: GitRepository
         name: ingress-nginx
         namespace: flux-system
+  dependsOn:
+    name: istio-discovery
+    namespace: istio-system
   interval: 5m
   values:
     controller:
