--- a/clusters/development/apps.yaml
+++ b/clusters/development/apps.yaml
@@ -10,6 +10,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./apps/development-eu-west-1
+  path: ./apps/development
   prune: true
   validation: client
