--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -12,7 +12,7 @@ spec:
         name: ingress-nginx
         namespace: flux-system
   dependsOn:
-    name: istio-discovery
+  - name: istio-discovery
     namespace: istio-system
   interval: 5m
   values:
