httpbin dependent on istio

--- a/apps/base/httpbin/release.yaml
+++ b/apps/base/httpbin/release.yaml
@@ -12,6 +12,9 @@ spec:
         kind: GitRepository
         name: httpbin
         namespace: flux-system
+  dependsOn:
+  - name: istio-discovery
+    namespace: istio-system
   interval: 5m
   values:
     ingress:
