--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -2,6 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: kiali
+  namespace: istio-system
 spec:
   releaseName: kiali
   chart:
@@ -15,3 +16,6 @@ spec:
   values:
     auth:
       strategy: "anonymous"
+    deployment:
+      image_version: latest
+      version_label: latest
