--- a/infrastructure/jaeger/release.yaml
+++ b/infrastructure/jaeger/release.yaml
@@ -2,6 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: jaeger
+  namespace: istio-system
 spec:
   releaseName: jaeger
   chart:
