--- a/apps/base/httpbin/release.yaml
+++ b/apps/base/httpbin/release.yaml
@@ -15,6 +15,8 @@ spec:
   dependsOn:
   - name: istio-discovery
     namespace: istio-system
+  - name: ingress-nginx
+    namespace: default
   interval: 5m
   values:
     ingress:
