--- a/infrastructure/grafana/release.yaml
+++ b/infrastructure/grafana/release.yaml
@@ -13,3 +13,7 @@ spec:
         name: grafana
         namespace: flux-system
   interval: 5m
+  values:
+    env:
+    - name: JAEGER_AGENT_PORT
+      value: "5775"
