promethrus kubeapiserver connection

--- a/infrastructure/prometheus/release.yaml
+++ b/infrastructure/prometheus/release.yaml
@@ -15,6 +15,9 @@ spec:
   interval: 5m
   values:
     server:
+      podAnnotations:
+        # Exclude outbound traffic to kubernetes master from redirection.
+        traffic.sidecar.istio.io/excludeOutboundIPRanges: "10.96.0.1/32"
       env:
       - name: JAEGER_AGENT_PORT
         value: "5775"
