--- a/infrastructure/grafana/release.yaml
+++ b/infrastructure/grafana/release.yaml
@@ -12,6 +12,8 @@ spec:
         kind: GitRepository
         name: grafana
         namespace: flux-system
+  dependsOn:
+  - name: istio-discovery
   interval: 5m
   values:
     env:
