--- a/infrastructure/jaeger/release.yaml
+++ b/infrastructure/jaeger/release.yaml
@@ -12,4 +12,6 @@ spec:
         kind: GitRepository
         name: jaeger
         namespace: flux-system
+  dependsOn:
+  - name: istio-discovery  
   interval: 5m
