--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -12,6 +12,8 @@ spec:
         kind: GitRepository
         name: kiali
         namespace: flux-system
+  dependsOn:
+  - name: istio-discovery
   interval: 5m
   values:
     auth:
