--- a/infrastructure/prometheus/release.yaml
+++ b/infrastructure/prometheus/release.yaml
@@ -12,6 +12,8 @@ spec:
         kind: GitRepository
         name: prometheus
         namespace: flux-system
+  dependsOn:
+  - name: istio-discovery
   interval: 5m
   values:
     server:
