custom_dashboards reenabled

--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -27,4 +27,4 @@ spec:
       prometheus:
         url: http://prometheus-server.istio-system
       custom_dashboards:
-        enabled: false
+        enabled: true
