istio addons disable sidecar

--- a/infrastructure/grafana/release.yaml
+++ b/infrastructure/grafana/release.yaml
@@ -16,5 +16,7 @@ spec:
   - name: istio-discovery
   interval: 5m
   values:
+    podAnnotations:
+      sidecar.istio.io/inject: "false"
     env:
       JAEGER_AGENT_PORT: "5775"
