--- a/infrastructure/kustomization.yaml
+++ b/infrastructure/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 resources:
   - sources
   - istio
-  # - grafana
-  # - prometheus
-  # - jaeger
-  # - kiali
+  - grafana
+  - prometheus
+  - jaeger
+  - kiali
   - ingress-nginx
