--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -14,6 +14,11 @@ spec:
         namespace: flux-system
   dependsOn:
   - name: istio-discovery
+  - name: ingress-nginx
+    namespace: default
+  - name: jaeger
+  - name: grafana
+  - name: prometheus
   interval: 5m
   values:
     auth:
@@ -67,6 +72,6 @@ spec:
         in_cluster_url: http://grafana.istio-system:3000
         # url: /system/grafana
       prometheus:
-        url: http://prometheus-server.istio-system
+        url: http://prometheus-server.monitoring.svc.cluster.local:9090
       custom_dashboards:
         enabled: true
