--- a/infrastructure/prometheus/release.yaml
+++ b/infrastructure/prometheus/release.yaml
@@ -14,6 +14,7 @@ spec:
         namespace: flux-system
   dependsOn:
   - name: istio-discovery
+  - name: jaeger
   interval: 5m
   values:
     serviceAccounts:
