--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -72,6 +72,6 @@ spec:
         in_cluster_url: http://grafana.istio-system:3000
         # url: /system/grafana
       prometheus:
-        url: http://prometheus-server.monitoring.svc.cluster.local:9090
+        url: http://prometheus-server.istio-system:9090
       custom_dashboards:
         enabled: true
