--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -29,7 +29,7 @@ spec:
       pod_annotations:
         sidecar.istio.io/inject: "false"
     external_services:
-      tracing:
+      # tracing:
         # auth:
         #   ca_file: ''
         #   insecure_skip_verify: false
@@ -38,16 +38,16 @@ spec:
         #   type: none
         #   use_kiali_token: false
         #   username: ''
-        component_status:
-          app_label: jaeger
-          is_core: false
-        enabled: true
-        in_cluster_url: http://jaeger-query.istio-system/jaeger
-        namespace_selector: true
-        # url: 'http://localhost/jaeger'
-        whitelist_istio_system:
-        - jaeger-query
-      grafana:
+        # component_status:
+        #   app_label: jaeger
+        #   is_core: false
+        # enabled: true
+        # in_cluster_url: http://jaeger-query.istio-system/jaeger
+        # namespace_selector: true
+        # # url: 'http://localhost/jaeger'
+        # whitelist_istio_system:
+        # - jaeger-query
+      # grafana:
         # auth:
         #   ca_file: ''
         #   component_status:
@@ -59,17 +59,17 @@ spec:
         #   type: none
         #   use_kiali_token: false
         #   username: ''
-        dashboards:
-        - name: Istio Service Dashboard
-          variables:
-            namespace: var-namespace
-            service: var-service
-        - name: Istio Workload Dashboard
-          variables:
-            namespace: var-namespace
-            workload: var-workload
-        enabled: true
-        in_cluster_url: http://grafana.istio-system
+        # dashboards:
+        # - name: Istio Service Dashboard
+        #   variables:
+        #     namespace: var-namespace
+        #     service: var-service
+        # - name: Istio Workload Dashboard
+        #   variables:
+        #     namespace: var-namespace
+        #     workload: var-workload
+        # enabled: true
+        # in_cluster_url: http://grafana.istio-system
         # url: /system/grafana
       prometheus:
         url: http://prometheus-server.istio-system
