--- a/infrastructure/istio/release-discovery.yaml
+++ b/infrastructure/istio/release-discovery.yaml
@@ -19,8 +19,8 @@ spec:
       autoscaleEnabled: true
       autoscaleMin: 1
       autoscaleMax: 3
-      hub: "gcr.io/istio-testing"
-      tag: "latest"
+      # hub: "gcr.io/istio-testing"
+      # tag: "latest"
     sidecarInjectorWebhook:
       enableNamespacesByDefault: true
     telemetry:
@@ -28,6 +28,6 @@ spec:
       v2:
         prometheus:
           enabled: true
-    proxy:
-      hub: "gcr.io/istio-testing"
-      tag: "latest"
+    # proxy:
+    #   hub: "gcr.io/istio-testing"
+    #   tag: "latest"
