--- a/infrastructure/istio/release-discovery.yaml
+++ b/infrastructure/istio/release-discovery.yaml
@@ -19,8 +19,6 @@ spec:
       autoscaleEnabled: true
       autoscaleMin: 1
       autoscaleMax: 3
-      # hub: "gcr.io/istio-testing"
-      # tag: "latest"
     sidecarInjectorWebhook:
       enableNamespacesByDefault: true
     telemetry:
@@ -28,6 +26,6 @@ spec:
       v2:
         prometheus:
           enabled: true
-    # proxy:
-    #   hub: "gcr.io/istio-testing"
-    #   tag: "latest"
+    global:
+      hub: gcr.io/istio-release
+      tag: latest
