istio swtich to docker hub

--- a/infrastructure/istio/release-discovery.yaml
+++ b/infrastructure/istio/release-discovery.yaml
@@ -27,5 +27,5 @@ spec:
         prometheus:
           enabled: true
     global:
-      hub: gcr.io/istio-release
+      hub: docker.io/istio
       tag: latest
