--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -16,7 +16,7 @@ spec:
   - name: istio-discovery
   - name: ingress-nginx
     namespace: default
-  # - name: jaeger
+  - name: jaeger
   # - name: grafana
   - name: prometheus
   interval: 5m
@@ -42,7 +42,7 @@ spec:
       metrics_port: 9090
       web_root: /kiali
     external_services:
-      # tracing:
+      tracing:
         # auth:
         #   ca_file: ''
         #   insecure_skip_verify: false
@@ -51,15 +51,15 @@ spec:
         #   type: none
         #   use_kiali_token: false
         #   username: ''
-        # component_status:
-        #   app_label: jaeger
-        #   is_core: false
-        # enabled: true
-        # in_cluster_url: http://jaeger-query.istio-system/jaeger
-        # namespace_selector: true
-        # # url: 'http://localhost/jaeger'
-        # whitelist_istio_system:
-        # - jaeger-query
+        component_status:
+          app_label: jaeger
+          is_core: false
+        enabled: true
+        in_cluster_url: http://jaeger-query.istio-system/jaeger
+        namespace_selector: true
+        # url: 'http://localhost/jaeger'
+        whitelist_istio_system:
+        - jaeger-query
       # grafana:
         # auth:
         #   ca_file: ''
