--- a/infrastructure/istio/release-discovery.yaml
+++ b/infrastructure/istio/release-discovery.yaml
@@ -15,6 +15,8 @@ spec:
   - name: istio-base
   interval: 5m
   values:
+    meshConfig:
+      enableTracing: true
     pilot:
       autoscaleEnabled: true
       autoscaleMin: 1
