istio jaeger config

--- a/infrastructure/istio/release-discovery.yaml
+++ b/infrastructure/istio/release-discovery.yaml
@@ -31,3 +31,8 @@ spec:
     global:
       hub: docker.io/istio
       tag: "1.10.2"
+      proxy:
+        tracer: "zipkin"
+      tracer:
+        zipkin:
+          address: "jaeger-collector.istio-system:9411"
