--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -2,6 +2,9 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: ingress-nginx
+  labels:
+    app: ingress-nginx
+    version: 0.1
 spec:
   releaseName: ingress-nginx
   # chart:
