--- a/apps/base/httpbin/release.yaml
+++ b/apps/base/httpbin/release.yaml
@@ -4,7 +4,7 @@ metadata:
   name: httpbin
   namespace: default
   labels:
-    app: ingress-nginx
+    app: httpbin
     version: 0.1
 spec:
   releaseName: httpbin
