kiali enabling grafana

--- a/infrastructure/grafana/release.yaml
+++ b/infrastructure/grafana/release.yaml
@@ -19,5 +19,5 @@ spec:
   values:
     podAnnotations:
       sidecar.istio.io/inject: "false"
-    env:
-      JAEGER_AGENT_PORT: "5775"
+    # env:
+    #   JAEGER_AGENT_PORT: "5775"
