--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -3,8 +3,8 @@ kind: HelmRelease
 metadata:
   name: ingress-nginx
   labels:
-    app: ingress-nginx
-    version: 0.1
+    app: "ingress-nginx"
+    version: "0.1"
 spec:
   releaseName: ingress-nginx
   # chart:
