--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -34,14 +34,15 @@ spec:
         includes:
         - '*'
       ingress_enabled: true
-      override_ingress_yaml: |
-        annotations:
-          kubernetes.io/ingress.class: nginx
-          nginx.ingress.kubernetes.io/service-upstream: "true"
-          nginx.ingress.kubernetes.io/upstream-vhost: kiali.istio-system.svc.cluster.local
-        hosts:
-        - host: kiali.local
-          paths: [ / ]
+      override_ingress_yaml:
+        metadata: |
+          annotations:
+            kubernetes.io/ingress.class: nginx
+            nginx.ingress.kubernetes.io/service-upstream: "true"
+            nginx.ingress.kubernetes.io/upstream-vhost: kiali.istio-system.svc.cluster.local
+          hosts:
+          - host: kiali.local
+            paths: [ / ]
       secret_name: kiali
     istio_namespace: istio-system
     server:
