--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -40,9 +40,9 @@ spec:
             kubernetes.io/ingress.class: nginx
             nginx.ingress.kubernetes.io/service-upstream: "true"
             nginx.ingress.kubernetes.io/upstream-vhost: kiali.istio-system.svc.cluster.local
-          hosts:
-          - host: kiali.local
-            paths: [ / ]
+          # hosts:
+          # - host: kiali.local
+          #   paths: [ / ]
       secret_name: kiali
     istio_namespace: istio-system
     server:
@@ -50,6 +50,7 @@ spec:
       metrics_enabled: true
       metrics_port: 80
       web_root: /kiali
+      web_fqdn: kiali.local
     external_services:
       tracing:
         auth:
