--- a/infrastructure/istio/addon-kiali.yaml
+++ b/infrastructure/istio/addon-kiali.yaml
@@ -14,7 +14,7 @@ spec:
     singular: monitoringdashboard
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - name: v1
     served: true
     storage: true
 ...
@@ -594,7 +594,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/envoy.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: envoy
@@ -655,7 +655,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/go.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: go
@@ -727,7 +727,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/kiali.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: kiali
@@ -776,7 +776,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/micrometer-1.0.6-jvm-pool.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: micrometer-1.0.6-jvm-pool
@@ -824,7 +824,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/micrometer-1.0.6-jvm.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: micrometer-1.0.6-jvm
@@ -894,7 +894,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/micrometer-1.1-jvm.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: micrometer-1.1-jvm
@@ -967,7 +967,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/microprofile-1.1.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: microprofile-1.1
@@ -1031,7 +1031,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/microprofile-x.y.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: microprofile-x.y
@@ -1074,7 +1074,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/nodejs.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: nodejs
@@ -1138,7 +1138,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/quarkus.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: quarkus
@@ -1176,7 +1176,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/springboot-jvm-pool.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: springboot-jvm-pool
@@ -1197,7 +1197,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/springboot-jvm.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: springboot-jvm
@@ -1218,7 +1218,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/springboot-tomcat.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: springboot-tomcat
@@ -1239,7 +1239,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/thorntail.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: thorntail
@@ -1266,7 +1266,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/tomcat.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: tomcat
@@ -1338,7 +1338,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/vertx-client.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: vertx-client
@@ -1403,7 +1403,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/vertx-eventbus.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: vertx-eventbus
@@ -1467,7 +1467,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/vertx-jvm.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: vertx-jvm
@@ -1488,7 +1488,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/vertx-pool.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: vertx-pool
@@ -1561,7 +1561,7 @@ spec:
 ...
 ---
 # Source: kiali-server/templates/dashboards/vertx-server.yaml
-apiVersion: "monitoring.kiali.io/v1alpha1"
+apiVersion: "monitoring.kiali.io/v1"
 kind: MonitoringDashboard
 metadata:
   name: vertx-server
