--- a/istio-kiali.yaml
+++ b/istio-kiali.yaml
@@ -83,7 +83,7 @@ data:
       image_pull_policy: Always
       image_pull_secrets: []
       image_version: v1.34
-      ingress_enabled: false
+      ingress_enabled: true
       logger:
         log_format: text
         log_level: info
@@ -92,7 +92,11 @@ data:
       namespace: istio-system
       node_selector: {}
       override_ingress_yaml:
-        metadata: {}
+        metadata:
+          annotations:
+            kubernetes.io/ingress.class: nginx
+            nginx.ingress.kubernetes.io/service-upstream: "true"
+            nginx.ingress.kubernetes.io/upstream-vhost: kiali.istio-system.svc.cluster.local
       pod_annotations:
         sidecar.istio.io/inject: "false"
       pod_labels: {}
@@ -108,6 +112,50 @@ data:
     external_services:
       custom_dashboards:
         enabled: true
+      tracing:
+        auth:
+          ca_file: ''
+          insecure_skip_verify: true
+          password: ''
+          token: ''
+          type: none
+          use_kiali_token: false
+          username: ''
+        enabled: true
+        in_cluster_url: "http://tracing.istio-system/jaeger"
+        namespace_selector: true
+        # url: 'http://localhost/jaeger'
+        whitelist_istio_system:
+        - jaeger-query
+        - istio-ingressgateway
+        - tracing
+      grafana:
+        auth:
+          ca_file: ''
+          component_status:
+            app_label: grafana
+            is_core: false
+          insecure_skip_verify: false
+          password: ''
+          token: ''
+          type: none
+          use_kiali_token: false
+          username: ''
+        dashboards:
+        - name: Istio Service Dashboard
+          variables:
+            namespace: var-namespace
+            service: var-service
+        - name: Istio Workload Dashboard
+          variables:
+            namespace: var-namespace
+            workload: var-workload
+        enabled: true
+        in_cluster_url: http://grafana.istio-system:3000
+        url: "http://grafana.local"
+      prometheus:
+        url: http://prometheus.istio-system:9090
+      
     identity:
       cert_file: ""
       private_key_file: ""
@@ -119,6 +167,7 @@ data:
       metrics_port: 9090
       port: 20001
       web_root: /kiali
+      web_fqdn: kiali.local
 ...
 ---
 # Source: kiali-server/templates/role-viewer.yaml
