--- a/infrastructure/istio/release-discovery.yaml
+++ b/infrastructure/istio/release-discovery.yaml
@@ -33,6 +33,7 @@ spec:
       hub: docker.io/istio
       tag: "1.10.2"
       proxy:
+        excludeInboundPorts: "8080"
         excludeIPRanges: "10.96.0.1/32"
         tracer: "zipkin"
       tracer:
