--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -56,7 +56,7 @@ spec:
     server:
       port: 20001
       metrics_enabled: true
-      metrics_port: 80
+      metrics_port: 9090
       web_root: /kiali
       web_fqdn: kiali.local
     external_services:
@@ -101,6 +101,30 @@ spec:
         in_cluster_url: http://grafana.istio-system
         url: "http://grafana.local"
       prometheus:
-        url: http://prometheus-server.istio-system
+        auth:
+          ca_file: ""
+          insecure_skip_verify: false
+          password: ""
+          token: ""
+          type: "none"
+          use_kiali_token: false
+          username: ""
+        cache_duration: 10
+        cache_enabled: true
+        cache_expiration: 300
+        health_check_url: ""
+        is_core: true
+        url: http://prometheus-server.istio-system:9090
       custom_dashboards:
         enabled: true
+        prometheus:
+          auth:
+            ca_file: ""
+            insecure_skip_verify: false
+            password: ""
+            token: ""
+            type: "none"
+            use_kiali_token: false
+            username: ""
+          health_check_url: ""
+          url: "http://prometheus-server.istio-system:9090"
