istio old config

--- a/infrastructure/istio/release-discovery.yaml
+++ b/infrastructure/istio/release-discovery.yaml
@@ -33,8 +33,8 @@ spec:
       hub: docker.io/istio
       tag: "1.10.2"
       proxy:
-        excludeInboundPorts: "8080"
-        excludeIPRanges: "10.96.0.1/32"
+        # excludeInboundPorts: "8080"
+        # excludeIPRanges: "10.96.0.1/32"
         tracer: "zipkin"
       tracer:
         zipkin:
