kiali prometheus port

--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -56,7 +56,7 @@ spec:
     server:
       port: 20001
       metrics_enabled: true
-      metrics_port: 9090
+      metrics_port: 80
       # web_root: /kiali
       # web_fqdn: kiali.local
     external_services:
@@ -114,7 +114,7 @@ spec:
         # cache_expiration: 300
         # health_check_url: ""
         # is_core: true
-        url: http://prometheus-server.istio-system:9090
+        url: http://prometheus-server.istio-system
       custom_dashboards:
         enabled: true
         # prometheus:
