--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -60,22 +60,22 @@ spec:
       web_root: /kiali
       # web_fqdn: kiali.local
     external_services:
-      # tracing:
-      #   auth:
-      #     ca_file: ''
-      #     insecure_skip_verify: true
-      #     password: ''
-      #     token: ''
-      #     type: none
-      #     use_kiali_token: false
-      #     username: ''
-      #   enabled: true
-      #   in_cluster_url: "http://jaeger-query.istio-system"
-      #   namespace_selector: true
-      #   url: 'http://jaeger.local'
-      #   whitelist_istio_system:
-      #   - jaeger-query
-      #   - istio-ingressgateway
+      tracing:
+        auth:
+          ca_file: ''
+          insecure_skip_verify: true
+          password: ''
+          token: ''
+          type: none
+          use_kiali_token: false
+          username: ''
+        enabled: true
+        in_cluster_url: "http://jaeger-query.istio-system/jaeger"
+        namespace_selector: true
+        url: 'http://jaeger.local'
+        whitelist_istio_system:
+        - jaeger-query
+        - istio-ingressgateway
       # grafana:
       #   auth:
       #     ca_file: ''
