--- a/infrastructure/jaeger/release.yaml
+++ b/infrastructure/jaeger/release.yaml
@@ -40,6 +40,22 @@ spec:
       service:
         zipkin:
           port: 9411
+      # Used to create an Ingress record.
+      ingress:
+        enabled: true
+        hosts:
+        - jaeger-collector.local
+        annotations:
+          kubernetes.io/ingress.class: nginx
+          kubernetes.io/tls-acme: "true"
     query:
       podAnnotations:
         sidecar.istio.io/inject: "false"
+      # Used to create an Ingress record.
+      ingress:
+        enabled: true
+        hosts:
+        - jaeger-query.local
+        annotations:
+          kubernetes.io/ingress.class: nginx
+          kubernetes.io/tls-acme: "true"
