--- a/infrastructure/jaeger/release.yaml
+++ b/infrastructure/jaeger/release.yaml
@@ -42,7 +42,7 @@ spec:
           port: 9411
       # Used to create an Ingress record.
       ingress:
-        enabled: true
+        enabled: false
         hosts:
         - jaeger-collector.local
         annotations:
@@ -55,7 +55,7 @@ spec:
       ingress:
         enabled: true
         hosts:
-        - jaeger-query.local
+        - jaeger.local
         annotations:
           kubernetes.io/ingress.class: nginx
           kubernetes.io/tls-acme: "true"
