--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -42,9 +42,6 @@ spec:
             kubernetes.io/ingress.class: nginx
             nginx.ingress.kubernetes.io/service-upstream: "true"
             nginx.ingress.kubernetes.io/upstream-vhost: kiali.istio-system.svc.cluster.local
-          # hosts:
-          # - host: kiali.local
-          #   paths: [ / ]
       secret_name: kiali
     istio_namespace: istio-system
     kubernetes_config:
@@ -76,30 +73,30 @@ spec:
         whitelist_istio_system:
         - jaeger-query
         - istio-ingressgateway
-      # grafana:
-      #   auth:
-      #     ca_file: ''
-      #     component_status:
-      #       app_label: grafana
-      #       is_core: false
-      #     insecure_skip_verify: false
-      #     password: ''
-      #     token: ''
-      #     type: none
-      #     use_kiali_token: false
-      #     username: ''
-      #   dashboards:
-      #   - name: Istio Service Dashboard
-      #     variables:
-      #       namespace: var-namespace
-      #       service: var-service
-      #   - name: Istio Workload Dashboard
-      #     variables:
-      #       namespace: var-namespace
-      #       workload: var-workload
-      #   enabled: true
-      #   in_cluster_url: http://grafana.istio-system
-      #   url: "http://grafana.local"
+      grafana:
+        auth:
+          ca_file: ''
+          component_status:
+            app_label: grafana
+            is_core: false
+          insecure_skip_verify: false
+          password: ''
+          token: ''
+          type: none
+          use_kiali_token: false
+          username: ''
+        dashboards:
+        - name: Istio Service Dashboard
+          variables:
+            namespace: var-namespace
+            service: var-service
+        - name: Istio Workload Dashboard
+          variables:
+            namespace: var-namespace
+            workload: var-workload
+        enabled: true
+        in_cluster_url: http://grafana.istio-system
+        url: "http://grafana.local"
       prometheus:
         # auth:
         #   ca_file: ""
