ingress-nginx adding labels for kiali to recognize

--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -30,6 +30,9 @@ spec:
   interval: 5m
   values:
     controller:
+      labels:
+        app: "ingress-nginx"
+        version: "0.1"
       ingressClass: nginx
       podAnnotations:
         # Do not redirect inbound traffic to Envoy.
