ingress-nginx podLabels revert

--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -33,10 +33,10 @@ spec:
       labels:
         app: "ingress-nginx"
         version: "0.1"
-      podLabels:
-        app.kubernetes.io/name: "ingress-nginx-controller"
-        app.kubernetes.io/component: "controller"
-        app.kubernetes.io/instance: "ingress-nginx"
+      # podLabels:
+      #   app.kubernetes.io/name: "ingress-nginx-controller"
+      #   app.kubernetes.io/component: "controller"
+      #   app.kubernetes.io/instance: "ingress-nginx"
       ingressClass: nginx
       podAnnotations:
         # Do not redirect inbound traffic to Envoy.
