--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -30,13 +30,20 @@ spec:
   interval: 5m
   values:
     controller:
-      labels:
-        app: "ingress-nginx"
+      # labels:
+      #   app: "ingress-nginx"
+      #   version: "0.1"
+      podLabels:
+        app.kubernetes.io/name: "ingress-nginx-controller"
+        app.kubernetes.io/component: "controller"
+        app.kubernetes.io/instance: "ingress-nginx"
+        app: "ingress-nginx-controller"
+        app.kubernetes.io/managed-by: "Helm"
+        app.kubernetes.io/version: "0.48.1"
+        helm.sh/chart: "ingress-nginx-3.35.0"
+        helm.toolkit.fluxcd.io/name: "ingress-nginx"
+        helm.toolkit.fluxcd.io/namespace: "default"
         version: "0.1"
-      # podLabels:
-      #   app.kubernetes.io/name: "ingress-nginx-controller"
-      #   app.kubernetes.io/component: "controller"
-      #   app.kubernetes.io/instance: "ingress-nginx"
       ingressClass: nginx
       podAnnotations:
         # Do not redirect inbound traffic to Envoy.
@@ -51,9 +58,9 @@ spec:
             sidecar.istio.io/inject: "false"
       replicaCount: 1
       service:
-        labels:
-          app: "ingress-nginx"
-          version: "0.1"
+        # labels:
+        #   app: "ingress-nginx"
+        #   version: "0.1"
         enabled: true
         annotations:
           service.beta.kubernetes.io/aws-load-balancer-type: nlb
